--- a/AndroidSrc/app/src/main/res/values/styles.xml
+++ b/AndroidSrc/app/src/main/res/values/styles.xml
@@ -1,17 +1,22 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="action_button">
-        <item name="android:minWidth">100.0dip</item>
-        <item name="android:minHeight">100.0dip</item>
+
+    <!-- Base application theme. -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
     </style>
-    <style name="changemode_button">
-        <item name="android:background">#ffff0000</item>
-        <item name="android:minHeight">100.0dip</item>
+        <!--
+        Base application theme, dependent on API level. This theme is replaced
+        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
+    -->
+    <style name="AppBaseTheme" parent="android:Theme.Light">
+        <!--
+            Theme customizations available in newer API levels can go in
+            res/values-vXX/styles.xml, while customizations related to
+            backward-compatibility can go here.
+        -->
     </style>
-    <style name="changemode_acceler">
-        <item name="android:background">#ff0000ff</item>
-        <item name="android:minHeight">100.0dip</item>
-    </style>
-    <style name="AppBaseTheme" parent="@android:style/Theme.Light" />
-    <style name="AppTheme" parent="@style/AppBaseTheme" />
+
 </resources>
